This is the combination of the previous commits into one nice clean commit
OH YEA

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h1>YO</h1>
     <h3>THATS</h3>
     <h2>TYTE</h2>
+    <h1>MAYBE</h1>
+    <h3>IT</h3>
+    <h2>WILL</h2>
+    <h1>BE</h1>
   </body>
 </html>
