Combine previous 3 commits, add updates
This commit combines and adds updates

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <h3>IT</h3>
     <h2>WILL</h2>
     <h1>BE</h1>
+    <h2>OK</h2>
+    <h3>I DONT KNOW</h3>
+    <h1>GONNA GET THERE</h1>
   </body>
 </html>
