--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <h2>OK</h2>
     <h3>I DONT KNOW</h3>
     <h1>GONNA GET THERE</h1>
+    <h1>OH YEA</h1>
+    <h3>HERE WE GO</h3>
+    <h1>OK</h1>
   </body>
 </html>
