This commit adds all the changes for issue_5

--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
     <h1>OH YEA</h1>
     <h3>HERE WE GO</h3>
     <h1>OK</h1>
+    <h3>NEW SHIT</h3>
+    <h2>HAS COME TO LIGHT</h2>
+    <h3>AND</h3>
+    <h4>WILL BE DEALT</h4>
   </body>
 </html>
