This is adding all the things

--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
     <h2>HAS COME TO LIGHT</h2>
     <h3>AND</h3>
     <h4>WILL BE DEALT</h4>
+    <h1>WITH</h1>
+    <h3>NOW</h3>
+    <h3>RIGHT</h3>
   </body>
 </html>
