This is the combined clean commit

--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Mock 2</title>
   </head>
   <body>
-    <h1>YO</h1>
-    <h3>THATS</h3>
-    <h2>TYTE</h2>
-    <h1>MAYBE</h1>
+    <h1>IF</h1>
+    <h3>ITS</h3>
+    <h2>WORTH</h2>
+    <h1>IT</h1>
     <h3>IT</h3>
     <h2>WILL</h2>
     <h1>BE</h1>
-    <h2>OK</h2>
-    <h3>I DONT KNOW</h3>
-    <h1>GONNA GET THERE</h1>
-    <h1>OH YEA</h1>
-    <h3>HERE WE GO</h3>
-    <h1>OK</h1>
-    <h3>NEW SHIT</h3>
-    <h2>HAS COME TO LIGHT</h2>
-    <h3>AND</h3>
-    <h4>WILL BE DEALT</h4>
-    <h1>WITH</h1>
-    <h3>NOW</h3>
-    <h3>RIGHT</h3>
+    <h2>VERY DIFFICULT</h2>
+    <h3>IF</h3>
+    <h1>ITS</h1>
+    <h1>THE MOST DIFFICULT THING EVER</h1>
+    <h3>IT</h3>
+    <h1>IS</h1>
+    <h3>VERY</h3>
+    <h2>MUCH</h2>
+    <h3>WORTH</h3>
+    <h4>IT</h4>
   </body>
 </html>
