This is the combined, clean commit

--- a/index.html
+++ b/index.html
@@ -7,22 +7,8 @@
     <title>Mock 2</title>
   </head>
   <body>
-    <h1>IF</h1>
-    <h3>ITS</h3>
-    <h2>WORTH</h2>
-    <h1>IT</h1>
-    <h3>IT</h3>
-    <h2>WILL</h2>
-    <h1>BE</h1>
-    <h2>VERY DIFFICULT</h2>
-    <h3>IF</h3>
-    <h1>ITS</h1>
-    <h1>THE MOST DIFFICULT THING EVER</h1>
-    <h3>IT</h3>
-    <h1>IS</h1>
-    <h3>VERY</h3>
-    <h2>MUCH</h2>
-    <h3>WORTH</h3>
-    <h4>IT</h4>
+    <h1>HEY</h1>
+    <h1>YOU</h1>
+    <h3>YOU</h3>
   </body>
 </html>
